# kpm_cpp

./: CMakeLists.txt  README.md  check_lattice.py  kernel_polynomials.py  kpm1_makeH.py  kpm2_cheb.py  mk_dir.py  run_kpm.cpp  serial_kpm.py
cpp_subroutines/: kpm_routine.cpp  kpm_routine.hpp
plt/: load_csv_plt_dos.py
